updated abm_desc to make varnames clearer with bold

--- a/man/description_docs/abm_desc.html
+++ b/man/description_docs/abm_desc.html
@@ -413,47 +413,56 @@ meningitis and 22 variables</p>
 </div>
 <div id="variables" class="section level3">
 <h3>Variables</h3>
-<p>casenum case number, from 1 to 581; type: double</p>
-<p>year 2 digit year, from 68 (1968) to 80 (1980), 72 missing; type:
+<p><strong>casenum</strong> - case number, from 1 to 581; type:
 double</p>
-<p>month month, from 1 (January) to 12 (December), 81 missing; type:
-double</p>
-<p>age age in years, 81 missing; type: double</p>
-<p>race coded as 1 = Black, 2 = White, 85 missing; type: double</p>
-<p>sex gender, coded as 0 = male and 1 = female, 81 missing; type:
-double</p>
-<p>blood_wbc white blood cell count in blood, in thousands of cells per
-cubic millimeter, 141 missing; type: double</p>
-<p>blood_neut_pct Percentage of white blood cells that are neutrophils,
-considered indicative of acute bacterial infection, in blood, 146
+<p><strong>year</strong> - 2 digit year, from 68 (1968) to 80 (1980), 72
 missing; type: double</p>
-<p>blood_band_pct Band cells, also known as immature neutrophils,
-considered indicative of acute bacterial infection, in blood, in percent
-of the total white blood cells, 153 missing; type: double</p>
-<p>blood_gluc Blood glucose, in milligrams per deciliter, 258 missing;
+<p><strong>month</strong> - month, from 1 (January) to 12 (December), 81
+missing; type: double</p>
+<p><strong>age</strong> - age in years, 81 missing; type: double</p>
+<p><strong>race</strong> - coded as 1 = Black, 2 = White, 85 missing;
 type: double</p>
-<p>csf_gluc CSF (cerebrospinal fluid) glucose, in milligrams per
-deciliter, 129 missing; type: double</p>
-<p>csf_prot CSF (cerebrospinal fluid) protein, in milligrams per
-deciliter, 249 missing; type: double</p>
-<p>csf_rbc CSF (cerebrospinal fluid) red blood cells, thousands of cells
-per cubic millimeter, 271 missing; type: double</p>
-<p>csf_wbc CSF (cerebrospinal fluid) white blood cells, thousands of
-cells per cubic millimeter, 101 missing; type: double</p>
-<p>csf_neut_pct CSF (cerebrospinal fluid) neutrophil percentage, percent
-of total white blood cells in CSF, 132 missing; type: double</p>
-<p>csf_mono_pct CSF (cerebrospinal fluid) monocyte percentage, percent
-of total white blood cells in CSF, 165 missing; type: double</p>
-<p>csf_lymph_pct CSF (cerebrospinal fluid) lymphocyte percentage,
-percent of total white blood cells in CSF, 162 missing; type: double</p>
-<p>gram gram stain result, values 0-6, 313 missing; type: double</p>
-<p>csf_cult result of csf culture for bacterial growth, values 0-6, 307
+<p><strong>sex</strong> - gender, coded as 0 = male and 1 = female, 81
 missing; type: double</p>
-<p>blood_cult result of blood culture for bacterial growth, values 0-6,
-434 missing, 11; type: double</p>
-<p>subset subset, training = 1 or test = 2; type: double</p>
-<p>abm the outcome variable, acute bacterial meningitis, 0 = absent or 1
-= present, 80 missing; type: double</p>
+<p><strong>blood_wbc -</strong> white blood cell count in blood, in
+thousands of cells per cubic millimeter, 141 missing; type: double</p>
+<p><strong>blood_neut_pct</strong> - Percentage of white blood cells
+that are neutrophils, considered indicative of acute bacterial
+infection, in blood, 146 missing; type: double</p>
+<p><strong>blood_band_pct</strong> - Band cells, also known as immature
+neutrophils, considered indicative of acute bacterial infection, in
+blood, in percent of the total white blood cells, 153 missing; type:
+double</p>
+<p><strong>blood_gluc -</strong> Blood glucose, in milligrams per
+deciliter, 258 missing; type: double</p>
+<p><strong>csf_gluc</strong> - CSF (cerebrospinal fluid) glucose, in
+milligrams per deciliter, 129 missing; type: double</p>
+<p><strong>csf_prot</strong> - CSF (cerebrospinal fluid) protein, in
+milligrams per deciliter, 249 missing; type: double</p>
+<p><strong>csf_rbc</strong> - CSF (cerebrospinal fluid) red blood cells,
+thousands of cells per cubic millimeter, 271 missing; type: double</p>
+<p><strong>csf_wbc</strong> - CSF (cerebrospinal fluid) white blood
+cells, thousands of cells per cubic millimeter, 101 missing; type:
+double</p>
+<p><strong>csf_neut_pct</strong> - CSF (cerebrospinal fluid) neutrophil
+percentage, percent of total white blood cells in CSF, 132 missing;
+type: double</p>
+<p><strong>csf_mono_pct -</strong> CSF (cerebrospinal fluid) monocyte
+percentage, percent of total white blood cells in CSF, 165 missing;
+type: double</p>
+<p><strong>csf_lymph_pct</strong> - CSF (cerebrospinal fluid) lymphocyte
+percentage, percent of total white blood cells in CSF, 162 missing;
+type: double</p>
+<p><strong>gram -</strong> gram stain result, values 0-6, 313 missing;
+type: double</p>
+<p><strong>csf_cult</strong> - result of csf culture for bacterial
+growth, values 0-6, 307 missing; type: double</p>
+<p><strong>blood_cult</strong> - result of blood culture for bacterial
+growth, values 0-6, 434 missing, 11; type: double</p>
+<p><strong>subset</strong> - subset, training = 1 or test = 2; type:
+double</p>
+<p><strong>abm</strong> - the outcome variable, acute bacterial
+meningitis, 0 = absent or 1 = present, 80 missing; type: double</p>
 </div>
 <div id="details" class="section level3">
 <h3>Details</h3>
