--- a/man/description_docs/cdystonia_desc.html
+++ b/man/description_docs/cdystonia_desc.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Peter Higgins" />
 
 
-<title>Sulindac v. Polyps RCT Dataset Description Document</title>
+<title>Botulinum Toxin B vs Placebo RCT for Cervical Dystonia Dataset Description Document</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,72 +349,83 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Sulindac v. Polyps RCT Dataset Description
-Document</h1>
+<h1 class="title toc-ignore">Botulinum Toxin B vs Placebo RCT for
+Cervical Dystonia Dataset Description Document</h1>
 <h4 class="author">Peter Higgins</h4>
-<h4 class="date">8/10/2021</h4>
+<h4 class="date">4/5/2023</h4>
 
 </div>
 
 
 <div id="source" class="section level2">
 <h2>Source:</h2>
-<p>Source: This data set is from a study published in 1993 in the New
-England Journal of Medicine,</p>
-<p>F. M. Giardiello, S. R. Hamilton, A. J. Krush, S. Piantadosi, L. M.
-Hylind, P. Celano, S. V. Booker, C. R. Robinson and G. J. A. Offerhaus
-(1993), Treatment of colonic and rectal adenomas with sulindac in
-familial adenomatous polyposis. New England Journal of Medicine,
-328(18), 1313–1316.</p>
-<p>This dataset is derived from and improved upon from the {HSAUR}
-package.</p>
+<p>This data set is from a study published in 1999 in the journal
+Neurology,</p>
+<p>A. Brashear, M.F. Lew, D.D. Dykstra, C.L. Comella, S.A. Factor, R.L.
+Rodnitzky, R. Trosch, C. Singer, M.F. Brin, J.J. Murray, J.D. Wallace,
+A. Willmer–Hulme, M. Koller (1999), Safety and efficacy of NeuroBloc
+(botulinum toxin type B) in type A–responsive cervical dystonia.
+Neurology, 53(7), 1439.</p>
+<p>This dataset has been passed through Statistical Methods for the
+Analysis of Repeated Measurements by Charles S. Davis, pp. 161-163
+(Springer, 2002) and can also be found at Frank Harrell’s website
+here.</p>
 <div id="abstract" class="section level3">
 <h3>Abstract</h3>
-<p>A randomized, controlled trial of sulindac to reduce colon polyp
-formation in patients with familial adenomatous polyposis.</p>
+<p>Longitudinal results of a randomized, placebo-controlled trial of
+botulinum toxin type B (BotB) in 109 subjects across 9 sites. (more
+details available below the variable definitions).</p>
 </div>
 <div id="background" class="section level3">
 <h3>Background</h3>
-<p>FAP is an inherited condition caused by mutations in the APC
-(Adenomatous Polyposis Coli) gene that leads to early and frequent
-formation of precancerous polyps of the colon at a young age, and
-invariably leads to the development of colon cancer at a young age.
-Early, frequent surveillance colonoscopy and polyp removal is helpful,
-but this study examined whether there is a beneficial effect of
-preventive medical therapy with the nonsteroidal pain reliever,
-sulindac, versus placebo in a RCT vs placebo in 22 participants, with
-polyp number measured (via colonoscopy) at baseline, 3 months, and 12
-months after starting the study drug.</p>
+<p>Cervical dystonia, also called spasmodic torticollis, is a painful
+condition in which your neck muscles contract involuntarily, causing
+your head to twist or turn to one side. Cervical dystonia can also cause
+your head to uncontrollably tilt forward or backward. A rare disorder
+that can occur at any age, cervical dystonia most often occurs in
+middle-aged people, women more than men. Symptoms generally begin
+gradually and then reach a point where they don’t get substantially
+worse. 109 subjects across 9 sites were randomized to placebo (N = 36),
+5000 units of botulinum toxin B (N = 36), or 10,000 units of botulinum
+toxin B (N = 37), injected into the affected muscle to partially
+paralyze it and make it relax, releasing the spasmed side of the neck
+and head. The response variable is the score on the Toronto Western
+Spasmodic Torticollis Rating Scale (TWSTRS-Total on a 0-87 scale), which
+measures the severity, pain, and disability of cervical dystonia (higher
+scores mean more impairment) at weeks 0 (baseline), 2, 4, 8, 12, and 16.
+It is expected that the single botox injection at week 0 may wear off
+over time.</p>
 </div>
 <div id="study-design" class="section level3">
 <h3>Study Design</h3>
-<p>Prospective randomized controlled trial of sulindac vs. placebo in
-the prevention of colonic polyps in FAP (Familial Adenomatous
-Polyposis).</p>
+<p>Prospective randomized controlled trial of two doses of botulinum
+toxin B vs. placebo in the treatment of cervical dystonia
+(torticollis.</p>
 </div>
 <div id="subjects-variables" class="section level3">
 <h3>Subjects &amp; Variables</h3>
-<p>22 participants were assigned to 1 of 2 treatments, sulindac or
-placebo.</p>
-<p>The initial sample consisted of 22 people with known FAP.</p>
-<p>N = 22 subjects (2 dropped out between month 3 and 12) 7
-variables</p>
+<p>109 participants across 9 sites were assigned to 1 of 2 doses of
+botox B, 5000 or 10,000 units injected into the affected neck muscles,
+or a placebo injection, and followed for 16 weeks.</p>
+<p>7 variables</p>
 <ul>
-<li>participant_id</li>
-<li>sex</li>
-<li>age</li>
-<li>baseline (number of polyps at baseline visit)</li>
-<li>treatment (sulindac or placebo)</li>
-<li>number3m (number of polyps at 3 months)</li>
-<li>number6m (number of polyps at 6 months)</li>
+<li>week (0-16)</li>
+<li>site (1-9)</li>
+<li>id (1-19, not unique across sites)</li>
+<li>treat (1= placebo, 2 = 5,000 units botox B, 3 = 10,000 units botox
+B)</li>
+<li>age (in years)</li>
+<li>sex (1 = F, 2 = M)</li>
+<li>twstrs (total score of Toronto Western Spasmodic Torticollis Rating
+Scale, range 0-87)</li>
 </ul>
 <div id="citation" class="section level4">
 <h4>Citation</h4>
-<p>F. M. Giardiello, S. R. Hamilton, A. J. Krush, S. Piantadosi, L. M.
-Hylind, P. Celano, S. V. Booker, C. R. Robinson and G. J. A. Offerhaus
-(1993), Treatment of colonic and rectal adenomas with sulindac in
-familial adenomatous polyposis. New England Journal of Medicine,
-328(18), 1313–1316.</p>
+<p>A. Brashear, M.F. Lew, D.D. Dykstra, C.L. Comella, S.A. Factor, R.L.
+Rodnitzky, R. Trosch, C. Singer, M.F. Brin, J.J. Murray, J.D. Wallace,
+A. Willmer–Hulme, M. Koller (1999), Safety and efficacy of NeuroBloc
+(botulinum toxin type B) in type A–responsive cervical dystonia.
+Neurology, 53(7), 1439.</p>
 </div>
 </div>
 </div>
